--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,7 +9,7 @@ body {
 
 .form-signin {
   max-width: 380px;
-  padding: 15px 35px 45px;
+  padding: 35px 35px 45px;
   margin: 0 auto;
   background-color: #fff;
   border: 1px solid rgba(0,0,0,0.1);  
@@ -37,16 +37,22 @@ body {
 	z-index: 2;
 }
 
+input[type="text"] {
+	margin-bottom: 10px;
+}
 
-	input[type="text"] {
-	  margin-bottom: -1px;
-	  border-bottom-left-radius: 0;
-	  border-bottom-right-radius: 0;
-	}
+input[type="password"] {
+	margin-bottom: 20px;
+}
 
-	input[type="password"] {
-	  margin-bottom: 20px;
-	  border-top-left-radius: 0;
-	  border-top-right-radius: 0;
-	}
+input[type="submit"] {
+	margin-top: 20px;
+}
 
+#listemedicament{
+	margin-top: 15px;
+}
+
+.footercustom{
+	background-color: #007BFF;
+}
