--- a/assets/css/gsb.css
+++ b/assets/css/gsb.css
@@ -171,3 +171,15 @@ footer a.text-light:hover {
   color: #bfbfbf !important;
   transition-duration: 0.15s;
 }
+
+.affich{
+  margin : auto;
+  padding: 35px 35px 45px;
+  box-shadow: 2px 2px 20px  black;
+  background-color: #fff;
+}
+
+.carac{
+  text-decoration: underline;
+  font-weight: 700;
+}
