--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,12 +8,11 @@ body {
 }
 
 .form-signin {
+	margin : auto;
   max-width: 380px;
   padding: 35px 35px 45px;
-  margin: 0 auto;
   background-color: #fff;
-  border: 1px solid rgba(0,0,0,0.1);  
-
+  box-shadow: 2px 2px 20px  black;
 }
 
 .form-signin-heading,
@@ -49,8 +48,11 @@ input[type="submit"] {
 	margin-top: 20px;
 }
 
-#listemedicament{
+#listemedicament,#listepraticien{
+	width: 100%; 
+	height: 40px;
 	margin-top: 15px;
+	border-radius: 5px;
 }
 
 .footercustom{
