--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,6 +14,7 @@ body {
   max-width: 380px;
   padding: 35px 35px 20px;
   background-color: #fff;
+  box-shadow: 1px 1px 10px  black;
 }
 
 .form-signin-heading,
