--- a/assets/css/gsb.css
+++ b/assets/css/gsb.css
@@ -176,9 +176,13 @@ footer a.text-light:hover {
   margin : auto;
   padding: 35px 35px 45px;
   background-color: #fff;
+  border:1px solid;
 }
 
 .carac{
   text-decoration: underline;
   font-weight: 700;
+}
+.ecart{
+  margin-right: 15px;
 }
