--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -50,7 +50,7 @@ input[type="submit"] {
 	margin-top: 20px;
 }
 
-#listemedicament,#listepraticien{
+#listechoix{
 	width: 100%; 
 	height: 40px;
 	margin-top: 15px;
