--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -65,9 +65,11 @@ input[type="submit"] {
 	border-radius: 5px;
 }
 
-.footercustom{
-	background-color: #007BFF;
+footer{
+	background-color: #123EA6;
 }
+
+
 #contenu{
 	min-height: 100%;
 }
