--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,15 +6,7 @@ body {
 
 .wrapper {	
 	margin-top: 80px;
-  margin-bottom: 80px;
-}
-
-.form-signin {
-	margin : auto;
-  max-width: 380px;
-  padding: 35px 35px 20px;
-  background-color: #fff;
-  box-shadow: 1px 1px 10px  black;
+  	margin-bottom: 80px;
 }
 
 .form-signin-heading,
@@ -70,19 +62,6 @@ footer{
 }
 
 
-#contenu{
-	min-height: 100%;
-}
-#foot{
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-}
-.py-5 {
-	padding-top: 3rem !important;
-	padding-bottom: 25rem !important;
-  }
-
 #work_banner {
 	height: auto;
 }
@@ -94,35 +73,35 @@ footer{
 
 .rapport{
 	margin : auto;
-  padding: 35px 35px 45px;
-  padding-bottom: 20px;
-  background-color: #fff;
-  border:1px solid;
-  min-width: 500px;
-  max-width: 500px;
+  	padding: 35px 35px 45px;
+  	padding-bottom: 20px;
+  	background-color: #fff;
+  	border:1px solid;
+  	min-width: 500px;
+  	max-width: 500px;
 }
 
 @media (max-width: 990px) {
 	.rapport{
-		margin : auto;
-	  padding: 35px 35px 45px;
-	  padding-bottom: 20px;
-	  background-color: #fff;
-	  border:1px solid;
-	  min-width: 400px;
-	  max-width: 400px;
+	margin : auto;
+	padding: 35px 35px 45px;
+	padding-bottom: 20px;
+	background-color: #fff;
+	border:1px solid;
+	min-width: 400px;
+	max-width: 400px;
 	}
 }
 @media (max-width: 575px) {
 	.rapport{
-		margin : auto;
-		margin-bottom: 50px;
-		padding: 35px 35px 45px;
-	  padding-bottom: 20px;
-	  background-color: #fff;
-	  border:1px solid;
-	  min-width: 80%;
-	  max-width: 80%;
+	margin : auto;
+	margin-bottom: 50px;
+	padding: 35px 35px 45px;
+	padding-bottom: 20px;
+	background-color: #fff;
+	border:1px solid;
+	min-width: 80%;
+	max-width: 80%;
 	}
 }
 
@@ -143,4 +122,52 @@ textarea{
 	margin-right: auto;
 	margin-left: auto;
 	min-width: 50%;
+}
+
+.test {
+    padding-top: 8%;
+	padding-bottom: 8%;
+}
+
+.titre {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    padding-bottom: 1rem;
+}
+
+.text {
+    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 1em;
+    font-weight: 300;
+    color: #6c757d;
+}
+
+.formulaire{
+    background-color: white;
+    padding: 2em;
+    margin-top: 1em;
+    box-shadow: 1px 1px 10px black;
+}
+
+.space{
+    margin-bottom: 1em;
+}
+
+.title-formulaire{
+    font-weight: 500;
+    text-align: center;
+    font-size: 2em;
+}
+
+.image-size{
+    max-width: 80%;
+    height: auto;
+}
+
+.bg-light{
+    background-color: #f6f9fe;
+}
+
+.afficher-info{
+	padding: 1em;
 }
