--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -171,3 +171,40 @@ textarea{
 .afficher-info{
 	padding: 1em;
 }
+
+.background-error {
+	box-shadow: 1px 1px 10px black;
+	padding-left: 15%;
+	padding-right: 15%;
+	padding-top: 10%;
+	padding-bottom: 10%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.title-error {
+	font-size: 50;
+	padding-bottom: 30px;
+	text-align: center;
+}
+
+.link-error {
+	text-decoration: none;
+	font-size: 20;
+	color: white;
+	background-color: #3f3f3f;
+	border-radius: 10px;
+	padding-bottom: 6px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.link-error:hover {
+	color: white;
+}
+
+.text-error {
+	font-size: 20;
+	padding-bottom: 30px;
+}
