--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -43,7 +43,8 @@ input[type="submit"] {
 }
 
 #listechoix{
-	width: 100%; 
+	width: fit-content;
+	min-width: 20px;
 	height: 40px;
 	margin-top: 15px;
 	border-radius: 5px;
@@ -127,6 +128,9 @@ textarea{
 .test {
     padding-top: 8%;
 	padding-bottom: 8%;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .titre {
@@ -142,11 +146,30 @@ textarea{
     color: #6c757d;
 }
 
+.formulaire-recherche{
+    background-color: white;
+    padding: 2em;
+    margin-top: 1em;
+    box-shadow: 1px 1px 10px black;
+	width: 30vw;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .formulaire{
     background-color: white;
     padding: 2em;
     margin-top: 1em;
     box-shadow: 1px 1px 10px black;
+	width: 30vw;
+}
+
+@media (max-width: 991px) {
+	.formulaire{
+		width: 300px;
+		min-width: fit-content;
+	}
 }
 
 .space{
