--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,27 +1,27 @@
 @font-face {
-	font-family: 'OldStandard';
-	src: url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap');
+	font-family: "OldStandard";
+	src: url("https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap");
 }
 
 body {
-	background: #F6F9FE !important;
+	background: #f6f9fe !important;
 	min-height: 100%;
 	position: relative;
-	font-family: 'OldStandard';
+	font-family: "OldStandard";
 }
 
-.wrapper {	
+.wrapper {
 	margin-top: 80px;
-  	margin-bottom: 80px;
+	margin-bottom: 80px;
 }
 
 .form-signin-heading,
 .checkbox {
 	margin-bottom: 30px;
-	}
+}
 
 .checkbox {
-    font-weight: normal;
+	font-weight: normal;
 }
 
 .form-control {
@@ -48,7 +48,7 @@ input[type="submit"] {
 	margin-top: 20px;
 }
 
-#listechoix{
+#listechoix {
 	width: fit-content;
 	min-width: 20px;
 	height: 40px;
@@ -56,18 +56,17 @@ input[type="submit"] {
 	border-radius: 5px;
 }
 
-#listemotif{
-	width: 100%; 
+#listemotif {
+	width: 100%;
 	height: 40px;
 	margin-top: 0px;
 	margin-bottom: 15px;
 	border-radius: 5px;
 }
 
-footer{
-	background-color: #123EA6;
+footer {
+	background-color: #123ea6;
 }
-
 
 #work_banner {
 	height: auto;
@@ -76,55 +75,72 @@ footer{
 .py-12 {
 	padding-top: 3rem !important;
 	padding-bottom: 3rem !important;
-  }
-
-.rapport{
-	margin : auto;
-  	padding: 35px 35px 45px;
-  	padding-bottom: 20px;
-  	background-color: #fff;
-  	border:1px solid;
-  	min-width: 500px;
-  	max-width: 500px;
 }
 
-@media (max-width: 990px) {
-	.rapport{
-	margin : auto;
+.rapport {
+	margin: auto;
 	padding: 35px 35px 45px;
 	padding-bottom: 20px;
 	background-color: #fff;
-	border:1px solid;
-	min-width: 400px;
-	max-width: 400px;
+	border: 1px solid;
+	min-width: 500px;
+	max-width: 500px;
+}
+
+.navbar-nav {
+	max-width: 900px;
+	width: 100%;
+}
+
+@media (max-width: 991px) {
+	.rapport {
+		margin: auto;
+		padding: 35px 35px 45px;
+		padding-bottom: 20px;
+		background-color: #fff;
+		border: 1px solid;
+		min-width: 400px;
+		max-width: 400px;
+	}
+	.formulaire {
+		width: 300px;
+		min-width: fit-content;
+	}
+	.navbar-nav {
+		width: fit-content;
+	}
+	.flex-fill {
+		display: flex;
+		justify-content: center !important;
 	}
 }
 @media (max-width: 575px) {
-	.rapport{
-	margin : auto;
-	margin-bottom: 50px;
-	padding: 35px 35px 45px;
-	padding-bottom: 20px;
-	background-color: #fff;
-	border:1px solid;
-	min-width: 80%;
-	max-width: 80%;
+	.rapport {
+		margin: auto;
+		margin-bottom: 50px;
+		padding: 35px 35px 45px;
+		padding-bottom: 20px;
+		background-color: #fff;
+		border: 1px solid;
+		min-width: 80%;
+		max-width: 80%;
 	}
 }
 
-textarea{
+textarea {
 	resize: none;
 	width: 100%;
 	margin-bottom: 15px;
 	height: 80px;
 }
 
-#datevisite, #datesaisit{
+#datevisite,
+#datesaisit {
 	align-items: right;
 	margin-bottom: 20px;
 }
 
-.valider{
+.valider {
 	display: block;
 	margin-right: auto;
 	margin-left: auto;
@@ -132,75 +148,62 @@ textarea{
 }
 
 .test {
-    padding-top: 4%;
+	padding-top: 4%;
 	padding-bottom: 8%;
-	display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.titre {
-    font-weight: 600;
-    padding-bottom: 1rem;
-}
-
-.text {
-    padding-bottom: 1em;
-	font-size: 20;
-    font-weight: 400;
-    color: #555555;
-}
-
-.formulaire-recherche{
-    background-color: white;
-    padding: 2em;
-    margin-top: 1em;
-<<<<<<< Updated upstream
-    box-shadow: 1px 1px 5px black;
-	width: 35vw;
-=======
-    box-shadow: 1px 1px 10px black;
->>>>>>> Stashed changes
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-.formulaire{
-    background-color: white;
-    padding: 2em;
-    margin-top: 1em;
-    box-shadow: 1px 1px 10px black;
-	width: 30vw;
+.titre {
+	font-weight: 600;
+	padding-bottom: 1rem;
 }
 
-@media (max-width: 991px) {
-	.formulaire{
-		width: 300px;
-		min-width: fit-content;
-	}
+.text {
+	padding-bottom: 1em;
+	font-size: 20;
+	font-weight: 400;
+	color: #555555;
 }
 
-.space{
-    margin-bottom: 1em;
+.formulaire-recherche {
+	background-color: white;
+	padding: 2em;
+	margin-top: 1em;
+	box-shadow: 1px 1px 10px black;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.title-formulaire{
-    font-weight: 500;
-    text-align: center;
-    font-size: 2em;
+.formulaire {
+	background-color: white;
+	padding: 2em;
+	box-shadow: 1px 1px 10px black;
+	width: 100%;
 }
 
-.image-size{
-    max-width: 80%;
-    height: auto;
+.space {
+	margin-bottom: 1em;
 }
 
-.bg-light{
-    background-color: #f6f9fe;
+.title-formulaire {
+	font-weight: 500;
+	text-align: center;
+	font-size: 2em;
 }
 
-.afficher-info{
+.image-size {
+	max-width: 80%;
+	height: auto;
+}
+
+.bg-light {
+	background-color: #f6f9fe;
+}
+
+.afficher-info {
 	padding: 1em;
 }
 
@@ -248,7 +251,7 @@ textarea{
 
 .size-img-page {
 	width: auto;
-	height: 250px;
+	max-height: 250px;
 }
 
 .structure-hero {
