--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,12 +2,29 @@
 	font-family: "OldStandard";
 	src: url("https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap");
 }
-
+body,
+html {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
 body {
 	background: #f6f9fe !important;
-	min-height: 100%;
+	width: 100%;
 	position: relative;
 	font-family: "OldStandard";
+	display: table;
+}
+
+#foot {
+	display: table-row;
+	width: 100%;
+	height: 350px;
+}
+
+footer {
+	min-height: 350px;
+	background-color: #123ea6;
 }
 
 .wrapper {
@@ -29,7 +46,6 @@ body {
 	font-size: 16px;
 	height: auto;
 	padding: 10px;
-	@include box-sizing(border-box);
 }
 
 :focus {
@@ -62,10 +78,6 @@ input[type="submit"] {
 	margin-top: 0px;
 	margin-bottom: 15px;
 	border-radius: 5px;
-}
-
-footer {
-	background-color: #123ea6;
 }
 
 #work_banner {
