--- a/assets/css/gsb.css
+++ b/assets/css/gsb.css
@@ -235,3 +235,44 @@ footer a.text-light:hover {
 	color: #fff;
 	background-color: #53595f;
 }
+
+.menuCont {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#imgAccueil {
+	max-width: 15px;
+	margin-bottom: 5px;
+	margin-right: 5px;
+}
+
+#imgMedoc {
+	max-width: 17px;
+	margin-bottom: 5px;
+	margin-right: 5px;
+}
+
+#imgPrat {
+	max-width: 20px;
+	margin-bottom: 5px;
+}
+
+#imgRap {
+	max-width: 18px;
+	margin-bottom: 5px;
+	margin-right: 2px;
+}
+
+#imgProfil {
+	max-width: 15px;
+	margin-bottom: 5px;
+	margin-right: 5px;
+}
+
+#imgDeco {
+	max-width: 15px;
+	margin-bottom: 4px;
+	margin-right: 5px;
+}
